# buttre

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LINUX_README.md  deny.toml
.github/workflows/: bench.yml  ci.yml  release.yml
crates/buttre-autostart/: Cargo.toml
crates/buttre-autostart/src/: lib.rs
crates/buttre-config/: Cargo.toml  build.rs
crates/buttre-config/src/: learned_adapter.rs  lib.rs  macro_adapter.rs
crates/buttre-config/ui/: config.slint
crates/buttre-core/: Cargo.toml
crates/buttre-core/src/hotkey/: manager.rs
crates/buttre-core/src/keyboard/: engine.rs  keyboard.rs  mod.rs
crates/buttre-core/src/services/: hotkey_service.rs
crates/buttre-core/src/state/: app_state.rs  atomic_write.rs  learning.rs  macros.rs  mod.rs  settings.rs
crates/buttre-core/tests/: english_typeability_guard.rs  keyboard_tests.rs  learning_stability_guard.rs  macros_composition_tests.rs  macros_stability_guard.rs  macros_tests.rs  spent_tone_undo_tests.rs  strict_spelling_keyboard_tests.rs
crates/buttre-core/tests/golden/: nom.snap  telex.snap  vni.snap
crates/buttre-engine/: Cargo.toml
crates/buttre-engine/data/: attested-syllables.txt
crates/buttre-engine/examples/: gen_attested_syllables.rs
crates/buttre-engine/tests/: attested_lookup_tests.rs  attested_repro_test.rs  executor_tests.rs  pipeline_validation_tests.rs  purity_audit.rs  stage3_validation_tests.rs  strict_spelling_dd_tests.rs  undo_functionality.rs  vni_edge_cases.rs
crates/buttre-platform/: Cargo.toml
crates/buttre-platform/src/: lib.rs  main.rs
crates/buttre-platform/tests/: platform_linux_bridge_tests.rs  platform_linux_tests.rs  platform_macos_tests.rs  platform_windows_tsf_tests.rs  shared_engine_bridge_tests.rs
crates/buttre-test/: Cargo.toml
crates/buttre-test/data/: telex-fallback.txt  telex.txt  vni.txt
crates/buttre-test/src/: explain.rs  main.rs
dev/bench/: data.js
docs/: 01-architecture.md  PIPELINE_ARCHITECTURE.md  TODO.md  benchmark_report.md
docs/adr/: 0001-learning-additive-only-record-replay-invariant.md  0002-tray-vs-config-window-ownership.md
hosts/macos/: Info.plist  README.md  build_app.sh
hosts/macos/src/: ButtreInputController.h  ButtreInputController.m  main.m
installers/linux/: buttre.xml
installers/linux/debian/: postinst  postrm
installers/macos/: build_dylib.sh
installers/windows/: build_hook_zip.ps1
scripts/: build-hook.ps1  install-ibus.sh  test-ibus-scenarios.py
(+25 files in other folders)
