[package]
name = "buttre-autostart"
version = "0.7.7-beta"
edition = "2021"
description = "OS login-autostart registration for buttre — shared by the tray process and the config window"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
